package com.unsw.tilegame.state;

/**
 * interface for state
 * @author xiaoyang
 * @version 2.7
 * @since 2.5
 */
public interface State {
	public void setMovable(boolean movable);
	public boolean getMoveState();
}
